# python_best_practices

./: .gitignore  .pylintrc  README.md  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt  test.py
.github/actions/run-pylint/: action.yml
.github/actions/run-tests/: action.yml
.github/workflows/: deploy.yml
export/: exporter.py
src/: __init__.py  main.py  test.py
src/core/: database.py
tests/: test_api.py  test_data_exporter.py  test_data_exporter_fail.py
