[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ikea-test"
version = "0.1.0"
authors = [
  { name = "Your Name", email = "your.email@example.com" },
]
description = "IKEA Test Project"
requires-python = ">=3.11"
dependencies = [
    "fastapi~=0.104.1",
    "uvicorn~=0.24.0",
    "sqlalchemy~=2.0.23",
    "psycopg2-binary~=2.9.9",
    "python-dotenv~=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest~=8.0.0",
    "pylint~=3.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.hatch.build.targets.wheel]
packages = ["src"]